--- a/src/sampling_utilities/generate_sampling_stalls.sh.in
+++ b/src/sampling_utilities/generate_sampling_stalls.sh.in
@@ -11,7 +11,7 @@ echo "curDir = ${PWD}"
 make all
 export LD_LIBRARY_PATH=$PWD:@CUDAToolkit_LIBRARY_ROOT@/extras/CUPTI/lib64/:$LD_LIBRARY_PATH
 chmod u+x ./libpc_sampling_continuous.pl
-./libpc_sampling_continuous.pl --collection-mode 1 --sampling-period 7 --file-name pcsampling_$file_name.dat --verbose --app "./../../executable/$file_name $args"
+./libpc_sampling_continuous.pl --collection-mode 1 --sampling-period 7 --file-name pcsampling_${run_prefix}.dat --verbose --app "${executable} ${args}"
 
 
 echo "Generating pc_sampling utility . . ."
@@ -19,4 +19,4 @@ cd ${gpuscout_dir}/sampling_utilities/sampling_utility/
 echo "curDir2 = ${PWD}"
 make all
 echo "LD_LIBRARY_PATH = ${LD_LIBRARY_PATH}"
-./pc_sampling_utility --file-name ../sampling_continuous/1_pcsampling_$file_name.dat > pcsampling_$file_name.txt
+./pc_sampling_utility --file-name ../sampling_continuous/1_pcsampling_${run_prefix}.dat > pcsampling_${run_prefix}.txt
